2007-01-25  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Use an array of structures to hold the
	border effects informations (id, nick, label) and iterate on
	the array to fill up the model fed to the effects combo.

2007-01-25  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Unref the GnomeProgram instance if you
	cancel the screenshot in interactive mode; hide the dialog
	inside the response callback, while the main loop is still
	running, so that the screenshot functions can grab the desired
	window instead of the (non-existing) interactive dialog.

	* screenshot-save.[ch]:
	* screenshot-utils.[ch]: Add license and copyright notice on
	these files.

2007-01-24  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Do not leak GnomeProgram instance
	and don't free the GOptionContext we pass to
	gnome_program_init(). (#400200, Christian Persch)

2007-01-23  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Add a value for the "no effect" value
	of the border_effect GConf key; add it to the effects combo
	box.  (#399859)

	* gnome-screenshot.schemas.in: Fix the description of the
	border-effect key.

2007-01-22  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: Use symbolic names for the GConf keys;
	move the frame creation of the interactive dialog into its
	own function; add an "effects" frame containing a check button
	for the "include window border" option and a combo box for
	the effects on the screenshot.

2007-01-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-screenshot.c:  Register "applets-screenshooter" in
	the icon factory so gtk_image_new_from_stock() works.  HIG
	fixes for interactive dialog. (#394941)

2007-01-07  Emmanuele Bassi  <ebassi@gnome.org>

	A gnome-screenshot.c
	D gnome-panel-screenshot.c
	D gnome-panel-screenshot.glade

	* Makefile.am:
	* gnome-screenshot.c: Remove mention of gnome-panel-screenshot
	from the build and code: this is not a panel applet anymore;